# morph

./: .gitignore  ACKNOWLEDGEMENTS.md  LICENSE  README.md  morph.spec  pyproject.toml
.github/workflows/: publish.yml
manifests/h/hariharen/morph/1.0.0/: hariharen.morph.installer.yaml  hariharen.morph.locale.en-US.yaml  hariharen.morph.yaml
morph/: batch.py  cli.py  deps.py  ffmpeg_utils.py  history.py  progress.py  registry.py  tui.py
morph/converters/: __init__.py  archives.py  audio.py  csv_json.py  csv_to_xlsx.py  documents.py  ebooks.py  fonts.py  images.py  json_yaml.py  legacy_office.py  models_3d.py  notebooks.py  ocr.py  pandas_extra.py  pdf.py  qrcode.py  raw_photo.py  subtitles.py  svg.py  toml.py  video.py  vtracer_converter.py  weasyprint_pdf.py  web.py  xlsx_to_csv.py
tests/: conftest.py  test_cli.py  test_converters.py  test_registry.py  test_web.py
