[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "morph"
version = "1.0.0"
description = "morph — convert anything to anything, from the CLI"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.2.0",
    "openpyxl>=3.1.2",
    "xlsxwriter>=3.2.0",
    "xlrd>=2.0.1",
    "rich>=13.7.0",
    "typer>=0.12.0",
    "chardet>=5.2.0",
    "python-dateutil>=2.9.0",
    "click>=8.1.7",
    "pyyaml>=6.0.1",
    "textual>=0.60.0",
    "Pillow>=10.0.0",
    "cairosvg>=2.7.1",
    "fonttools[woff]>=4.50.0",
]

[project.scripts]
morph = "morph.cli:app"

[tool.setuptools.packages.find]
include = ["morph*"]
