[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "morph"
version = "1.0.0"
description = "morph — convert anything to anything, from the CLI"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.2.0",
    "openpyxl>=3.1.2",
    "xlsxwriter>=3.2.0",
    "xlrd>=2.0.1",
    "pyarrow>=15.0.0",
    "odfpy>=1.4.1",
    "lxml>=5.1.0",
    "SQLAlchemy>=2.0.0",
    "rich>=13.7.0",
    "typer>=0.12.0",
    "chardet>=5.2.0",
    "python-dateutil>=2.9.0",
    "click>=8.1.7",
    "pyyaml>=6.0.1",
    "textual>=0.60.0",
    "Pillow>=10.0.0",
    "pillow-heif>=0.15.0",
    "pillow-avif-plugin>=1.4.3",
    "cairosvg>=2.7.1",
    "fonttools[woff]>=4.50.0",
    "pytesseract>=0.3.10",
    "trafilatura>=1.8.0",
    "crawl4ai>=0.4.0",
    "playwright>=1.40.0",
    "vtracer>=0.6.0",
    "bpy>=5.0.0",
]

[project.scripts]
morph = "morph.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
]

[tool.setuptools.packages.find]
include = ["morph*"]
